# gitsh

./: .gitignore  CONTRIBUTING.md  Makefile.am  configure.ac
lib/gitsh/: completer.rb  git_command.rb  parser.rb  shell_command.rb
spec/units/: completer_spec.rb  parser_spec.rb
